<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">极限特工</string>
	 <string name="xl_update_title">发现新版本</string>
    <string name="xl_update_btn">更新</string>
    <string name="xl_cancel_btn">取消</string>
    <string name="xl_update_ing">正在更新...</string>
    <string name="bd_payment_dialog_title">百度移动游戏</string>
    <string name="dialog_confirmexit">确认退出?</string>
    <string name="xl_btn_string_return">返回</string>
    <string name="xl_dialog_string_close">关闭</string>
    <string name="dialog_purchaseinfo">尊敬的用户,您购买信息如下</string>
    <string name="pay_purchase_item">所购道具</string>
    <string name="dialog_gamemname">游戏名称:</string>
    <string name="pay_payamount">支付金额:</string>
    <string name="tip_card_recharge_price">%s元</string>
    <string name="dialog_paymethods">支付方式:</string>
    <string name="dialog_paymoney">(点击确认将从您的手机话费中扣除%s元)</string>
    <string name="xl_payment_channel_confirm">确认购买</string>
    <string name="xl_payemnt_dialog_cc">客服：4006-555-266</string>
    <string name="xl_payment_dialog_title" />
    <string name="xl_payment_dialog_title_card_recharge">充值卡</string>
    <string name="dialog_try_otherpay">尝鲜其他支付方式</string>
    <string name="channel_alipay">支付宝</string>
    <string name="channel_tencentmm">微信支付</string>
    <string name="dialog_useotherpay">使用其他支付方式</string>
    <string name="pay_current_account">当前帐户:</string>
    <string name="pay_commodityname">商品名称:</string>
    <string name="dialog_lastpay">上次支付方式</string>
    <string name="xl_other_pay_mode">其他支付方式</string>
    <string name="payment_not_finish_tip">道具尚未完成购买,您将不能拥有该道具,无法获得极致游戏体验。</string>
    <string name="xl_tv_string_loading">加载中...</string>
    <string name="su_newgame">  最新游戏   </string>
    <string name="su_hotgame">  热门游戏  </string>
    <string name="tip_deal_result">交易结果</string>
    <string name="xl_text_quit_game_confirm_txt">真的要离开%s吗？</string>
    <string name="xl_btn_pointer_game_recommend_txt">热门游戏推荐</string>
    <string name="xl_btn_quit_game_txt">离开游戏</string>
    <string name="xl_payment_error_2003">本地无可用网络，请检测网络连接！</string>
    <string name="xl_txt_game_installed">您已经安装此游戏！</string>
    <string name="bd_payment_dialog_title_notice">百度移动游戏公告</string>
    <string name="xl_payment_dialog_title_notice" />
    <string name="xl_txt_game_name">游戏名称：</string>
    <string name="xl_txt_game_size">游戏大小：</string>
    <string name="xl_txt_start_download">立即下载</string>
    <string name="xl_txt_download_running">正在下载中，请稍候...</string>
    <string name="channel_name">BaiduMobAd_CHANNEL</string>
    <string name="xl_btn_start_download">开始准备下载...</string>
    <string name="xl_saveDownload">百度游戏省流量下载</string>
    <string name="xl_normalDownload">普通下载</string>
    <string name="xl_payment_sms_cm">移动手机话费</string>
    <string name="xl_payment_sms_cu">联通手机话费</string>
    <string name="xl_payment_sms_ct">电信手机话费</string>
    <string name="input_Text_number">请输入手机号:</string>
    <string name="input_Text_code">请输入验证码：</string>
    <string name="input_hit_Text">点击输入</string>
    <string name="xl_last_pay_mode">推荐支付方式</string>
    <string name="shenzhou_pay">神州付</string>
    <string name="dialog_discount">八折</string>
    <string name="channel_shenzhoupay">微信支付</string>
    <string name="channel_heepay">微信支付</string>
</resources>
